second html commit

--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
                   <span>2021 — 2024</span>
     
                   <p class="timeline-text"> Unweighted GPA: 4.0</p>
-                  <p class="timeline-text"> Weighted GPA: 4.83</p>
-                  <p class="timeline-text"> Class Rank: Top 1%</p>
+                  <!--<p class="timeline-text"> Weighted GPA: 4.83</p>
+                  <p class="timeline-text"> Class Rank: Top 1%</p>-->
                   <p class="timeline-text"> Total 8 AP classes with all 5s on AP exams</p>
                   <p class="timeline-text"> Total 10 Honors + Community College Courses</p>
 
