--- a/index.html
+++ b/index.html
@@ -185,10 +185,13 @@
     
             <section class="about-text">
               <p>
-                Hi, my name is Vidhi Patra. I'm a high schooler based in the Bay Area with a deep passion for artificial intelligence, 
-                machine learning, and data science! From an early age, I've always been fascinated by the possibilities and potential 
-                of AI technology. I love how it can simulate human intelligence and solve complex problems. I like to learn by doing 
-                projects, and I have numerous on my GitHub profile.
+                Hi, I’m Vidhi Patra — a Computer Science major at Georgia Tech with a strong interest in AI, machine learning, and data-driven systems. 
+                My work bridges technical rigor with real-world impact, spanning algorithmic trading, ethical AI governance, and cancer detection research. 
+                From building immersive AR learning platforms to presenting research at national conferences, I thrive on learning by doing. 
+                My projects and internships reflect my passion for applying CS in meaningful, interdisciplinary ways — 
+                whether that’s predicting natural disasters, optimizing trading strategies, or building tools that connect investors with startups.
+                At GT, I’m involved in research, finance, and developer communities — from working on a robotic search-and-rescue system to modeling options pricing in crypto markets. 
+              Check out my GitHub for projects, my LinkedIn for experience, or just reach out — I'm always excited to collaborate or chat about all things CS, innovation, or AI for good.
                 </p>
             </section>
     
