--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="sidebar-info">
     
             <figure class="avatar-box">
-              <img src="./assets/images/Vidhi Patra.jpg" alt="Vidhi Patra" width="80">
+              <img src="./assets/images/headshot.jpg" alt="Vidhi Patra" width="80">
             </figure>
     
             <div class="info-content">
